--- a/about.html
+++ b/about.html
@@ -35,9 +35,9 @@
 
 <!-- Nav Bar -->
 
-<nav class="navbar navbar-expand-xl navbar-light">
+<nav class="navbar navbar-expand-xl navbar-dark">
     <h1 class="nav-brand">Serendipity</h1>
-    <img class="brand-pic" src="images/pictures/5-removebg-preview.png" alt="brand-pic">
+    <img class="brand-pic" src="images/pictures/7-removebg-preview.png" alt="brand-pic">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
