--- a/reviews.html
+++ b/reviews.html
@@ -39,7 +39,7 @@
 
     <nav class="navbar navbar-expand-xl navbar-dark">
       <h1 class="nav-brand">Serendipity</h1>
-      <img class="brand-pic" src="images/pictures/2.png" alt="brand-pic">
+      <img class="brand-pic" src="images/pictures/7-removebg-preview.png" alt="brand-pic">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -75,32 +75,32 @@
 
         <div class="row">
           <div class="review-box col-lg-4 col-md-6">
-            <h3>Gracie Kabz</h3>
+            <h3 class="review-name">Gracie Kabz</h3>
             <p>24 November 2021</p>
             <p>"Service is absolutely amazing, product quality is amazing! I'm definitely sold😍! Going back for more!"</p>
           </div>
           <div class="review-box col-lg-4 col-md-6">
-            <h3>Ida de Klerk</h3>
+            <h3 class="review-name">Ida de Klerk</h3>
             <p>1 July 2021</p>
             <p>"Thank you Serendipity! I absolutely LOVE my Bathroom Storage! Makes life so much easier & it's beautiful. Thank you for the friendly service ♡♡"</p>
           </div>
           <div class="review-box col-lg-4 col-md-6">
-            <h3>Judy North</h3>
+            <h3 class="review-name">Judy North</h3>
             <p>19 December 2021</p>
             <p>"excellent workmanship . a must have. looks stunning in our bathroom. So very happy. thankyou."</p>
           </div>
           <div class="review-box col-lg-4 col-md-6">
-            <h3>Lynette</h3>
+            <h3 class="review-name">Lynette</h3>
             <p>8 June 2021</p>
             <p>"Lynne!!!! Thank you so much for my storage cabinet! I looooove it! :)"</p>
           </div>
           <div class="review-box col-lg-4 col-md-6">
-            <h3>Elizabeth</h3>
+            <h3 class="review-name">Elizabeth</h3>
             <p>---</p>
             <p>"So so happy!"</p>
           </div>
           <div class="review-box col-lg-4 col-md-6">
-            <h3>Luso Mtonga-Bouwers</h3>
+            <h3 class="review-name">Luso Mtonga-Bouwers</h3>
             <p>2 February 2022</p>
             <p>"Absolutely happy with my unit. Thank you 🙏🏾"</p>
           </div>
