Changes after meeting

--- a/index.html
+++ b/index.html
@@ -70,12 +70,9 @@
 
     <div class="land-section">
         <div class="welcome-box">
-            <img class="test-chicken" src="images/products/test-chicken.jpeg" alt="">
             <h1 class="slogan-text">Turning your unused space into a happy place!</h1>
-            <img class="test-chicken2" src="images/products/test-chicken-2.jpeg" alt="">
-            <!-- <a class="btnl btnl--white btnl--animated" href="products.html">View our Products</a> <br> -->
         </div>
-        <!-- <img class="welcome-img" src="images/products/product-img-06.jpeg" alt=""> -->
+        <img class="welcome-img" src="images/pictures/Serendiity Logo copy.png" alt="">
     </div>
 
 <!-- Features -->
