--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
 
 <!-- Footer -->
 
-<footer id="footer" class="copyright footer-white">
+<footer id="footer" class="copyright footer-light">
 
     <a target="_blank" href="https://www.facebook.com/SerendipityStorage"><i class="fab social-icons fa-facebook-f"></i></a>
     <a target="_blank" href="https://www.instagram.com/serendipity_storage/"><i class="fab social-icons fa-instagram"></i></a>
