--- a/reviews.html
+++ b/reviews.html
@@ -84,22 +84,19 @@
             <p>1 July 2021</p>
             <p>"Thank you Serendipity! I absolutely LOVE my Bathroom Storage! Makes life so much easier & it's beautiful. Thank you for the friendly service ♡♡"</p>
           </div>
-          <div class="review-box col-lg-4 col-md-6">
+          <div class="review-box col-lg-4 col-md-12">
             <h3 class="review-name">Judy North</h3>
             <p>19 December 2021</p>
             <p>"excellent workmanship . a must have. looks stunning in our bathroom. So very happy. thankyou."</p>
           </div>
-          <div class="review-box col-lg-4 col-md-6">
+        </div>
+        <div class="row second-row">
+          <div class="review-box col-lg-6 col-md-6">
             <h3 class="review-name">Lynette</h3>
             <p>8 June 2021</p>
             <p>"Lynne!!!! Thank you so much for my storage cabinet! I looooove it! :)"</p>
           </div>
-          <div class="review-box col-lg-4 col-md-6">
-            <h3 class="review-name">Elizabeth</h3>
-            <p>---</p>
-            <p>"So so happy!"</p>
-          </div>
-          <div class="review-box col-lg-4 col-md-6">
+          <div class="review-box col-lg-6 col-md-6">
             <h3 class="review-name">Luso Mtonga-Bouwers</h3>
             <p>2 February 2022</p>
             <p>"Absolutely happy with my unit. Thank you 🙏🏾"</p>
