--- a/about.html
+++ b/about.html
@@ -5,12 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serendipity</title>
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Domine&display=swap" rel="stylesheet">
-
+    <!-- Fonts -->
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/glacial-indifference" type="text/css"/>
     
     <!-- CSS Stylesheets -->
@@ -37,7 +32,7 @@
 
 <nav class="navbar navbar-expand-xl navbar-dark">
     <h1 class="nav-brand">Serendipity</h1>
-    <img class="brand-pic" src="images/pictures/7-removebg-preview.png" alt="brand-pic">
+    <img class="brand-pic" src="images/logo-white-leaf.png" alt="brand-pic">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -66,9 +61,8 @@
 
 <!-- Content -->
 
-
 <div class="about-content"> 
-    <img class="about-img" src="images/products/storage-unit3 copy.jpeg" alt="">
+    <img class="about-img" src="images/prod-09.jpeg" alt="Product Image">
     <div class="about-text">
         <div class="about-text-box">
             <h1>serendipity</h1>
@@ -91,7 +85,6 @@
     </div> 
 </div>  
 
-
 </div>
 
 <!-- Footer -->
@@ -106,7 +99,6 @@
 </footer>
 
 </div>
-
 
 </body>
 </html>
