--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serendipity</title>
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Domine&display=swap" rel="stylesheet">
-
+    <!-- Fonts -->
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/glacial-indifference" type="text/css"/>
     
     <!-- CSS Stylesheets -->
@@ -33,81 +28,80 @@
 
 
 <div class="home-page">
-    <div id="content-wrap">
+<div id="content-wrap">
 
 
 <!-- Navigation Bar -->
 
-    <nav class="navbar navbar-expand-xl navbar-dark">
-        <h1 class="nav-brand">Serendipity</h1>
-    <img class="brand-pic" src="images/pictures/2.png" alt="brand-pic">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav margin-left ml-auto">
-                <li class="nav-item active" aria-current="page">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="products.html">Products</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="reviews.html">Reviews</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+<nav class="navbar navbar-expand-xl navbar-dark">
+    <h1 class="nav-brand">Serendipity</h1>
+<img class="brand-pic" src="images/logo-white-leaf.png" alt="brand-pic">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav margin-left ml-auto">
+            <li class="nav-item active" aria-current="page">
+                <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="products.html">Products</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="reviews.html">Reviews</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
 
     <!-- Welcome box -->
 
-    <div class="land-section">
-        <div class="welcome-box">
-            <h1 class="slogan-text">Turning your unused space into a happy place!</h1>
-        </div>
-        <img class="welcome-img" src="images/pictures/Serendiity Logo copy.png" alt="">
+<div class="land-section">
+    <div class="welcome-box">
+        <h1 class="slogan-text">Turning your unused space into a happy place!</h1>
     </div>
+    <img class="welcome-img" src="images/serendiity-logo.png" alt="">
+</div>
 
 <!-- Features -->
 
 <div class="features">
-    
     <div class="row">
         <div class="feature-box col-lg-4">
             <i class="features-icon fas fa-check-circle fa-2x"></i>
             <h3>Versatile</h3>
             <p>Whether you want to add extra storage to your bathroom, declutter your bedroom, or display that something special in your lounge, our units are a must.</p>
-          </div>
-          <div class="feature-box col-lg-4">
+        </div>
+        <div class="feature-box col-lg-4">
             <i class="features-icon fas fa-star fa-2x"></i>
             <h3>Quality Product</h3>
             <p>Our clients comment time and time again on the quality of our products, and how well constructed our units are.</p>
-          </div>
-          <div class="feature-box col-lg-4">
+        </div>
+        <div class="feature-box col-lg-4">
             <i class="features-icon fa-solid fa-truck fa-2x"></i>
             <h3>Quick delivery</h3>
             <p>We enjoy giving our clients only the best service, by assuring quick crafting and delivery.</p>
-          </div>
+        </div>
     </div>
 </div>
-
 
 </div>
 
 <!-- Footer -->
 
-<footer id="footer" class="copyright footer-white">
+<footer id="footer" class="copyright">
 
     <a target="_blank" href="https://www.facebook.com/SerendipityStorage"><i class="fab social-icons fa-facebook-f"></i></a>
     <a target="_blank" href="https://www.instagram.com/serendipity_storage/"><i class="fab social-icons fa-instagram"></i></a>
-    <a class="contact-link" href="contact.html#order"><i class="fas social-icons fa-envelope"></i></a>
+    <a class="contact-link" href="contact.html"><i class="fas social-icons fa-envelope"></i></a>
     <p class="footer-text">Copyright © 2022 Serendipity Storage</p>
 
 </footer>
