--- a/products.html
+++ b/products.html
@@ -8,11 +8,6 @@
     <title>Serendipity</title>
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Domine&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/glacial-indifference" type="text/css"/>
     
     <!-- CSS Stylesheets -->
@@ -31,45 +26,43 @@
 </head>
 <body>
 
-    <div class="products-page">
+<div class="products-page">
+<div id="content-wrap">
 
-    <!-- Nav Bar -->
+<!-- Nav Bar -->
 
-    <nav class="navbar navbar-expand-xl navbar-light">
-        <h1 class="nav-brand">Serendipity</h1>
-        <img class="brand-pic" src="images/pictures/5-removebg-preview.png" alt="brand-pic">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav margin-left ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item active" aria-current="page">
-                    <a class="nav-link" href="products.html">Products</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="reviews.html">Reviews</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+<nav class="navbar navbar-expand-xl navbar-light">
+    <h1 class="nav-brand">Serendipity</h1>
+    <img class="brand-pic" src="images/logo-blue-leaf.png" alt="brand-pic">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav margin-left ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item active" aria-current="page">
+                <a class="nav-link" href="products.html">Products</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="reviews.html">Reviews</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
 
 <!-- Content -->
 
 <div class="products-content">
-    <div id="content-wrap">
-
-
 
 <!-- Product List 1 -->
 
@@ -80,16 +73,16 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="3000">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img class="product-img" src="images/products/product-img-09 copy.jpeg" alt="First slide">
+                        <img class="product-img" src="images/prod-01.jpeg" alt="Product #1">
                       </div>
                       <div class="carousel-item">
-                        <img class="product-img" src="images/products/product-img-08.jpeg" alt="Second slide">
+                        <img class="product-img" src="images/prod-02.jpeg" alt="Product #2">
                       </div>
                       <div class="carousel-item">
-                        <img class="product-img" src="images/products/product-img-10.jpeg" alt="Third slide">
+                        <img class="product-img" src="images/prod-03.jpeg" alt="Product #3">
                       </div>
                       <div class="carousel-item">
-                        <img class="product-img" src="images/products/product-img-11.jpeg" alt="Third slide">
+                        <img class="product-img" src="images/prod-04.jpeg" alt="Product #4">
                       </div>
                     </div>
                   </div>
@@ -132,10 +125,10 @@
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="3000">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img class="product-img" src="images/products/product-img-06 copy.jpeg" alt="First slide">
+                            <img class="product-img" src="images/prod-05.jpeg" alt="Product #1">
                           </div>
                           <div class="carousel-item">
-                            <img class="product-img" src="images/products/storage-unit2.png" alt="Second slide">
+                            <img class="product-img" src="images/prod-06.png" alt="Product #2">
                           </div>
                         </div>
                       </div>
@@ -178,10 +171,10 @@
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="3000">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img class="product-img" src="images/products/storage-cabinet1.jpeg" alt="First slide">
+                            <img class="product-img" src="images/prod-07.jpeg" alt="Product #1">
                           </div>
                           <div class="carousel-item">
-                            <img class="product-img" src="images/products/storage-cabinet2.jpeg" alt="Second slide">
+                            <img class="product-img" src="images/prod-08.jpeg" alt="Product #2">
                           </div>
                         </div>
                       </div>
