--- a/about.html
+++ b/about.html
@@ -79,8 +79,8 @@
         We love our units and so do our customers!
         </em>
         <div class="about-button-box">
-            <a class="btnl about-buttons btnl--white btnl--animated" href="products.html">View our Products</a>
-            <a class="btnl about-buttons btnl--white btnl--animated" href="reviews.html">Read our Reviews</a>    
+            <a class="btnl about-button btnl--white btnl--animated" href="products.html">View our Products</a>
+            <a class="btnl about-button btnl--white btnl--animated" href="reviews.html">Read our Reviews</a>    
         </div>
     </div> 
 </div>  
