--- a/reviews.html
+++ b/reviews.html
@@ -90,7 +90,10 @@
             <p>"excellent workmanship . a must have. looks stunning in our bathroom. So very happy. thankyou."</p>
           </div>
         </div>
-        <div class="row second-row">
+
+        <a class="btnl view-more-btn btnl--white btnl--animated" href="javascript: void(0)">View More</a>    
+
+        <div class="row second-row hidden">
           <div class="review-box col-lg-6 col-md-6">
             <h3 class="review-name">Lynette</h3>
             <p>8 June 2021</p>
@@ -102,6 +105,7 @@
             <p>"Absolutely happy with my unit. Thank you 🙏🏾"</p>
           </div>
         </div>
+        <a class="btnl view-less-btn btnl--white btnl--animated hidden" href="javascript: void(0)">View Less</a>    
 </div>
 
 </div>
@@ -118,6 +122,9 @@
 </footer>
 
 </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="index.js"></script>
 
 
 </body>
