--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,9 @@
                     </td>
                 </tr>
             </table>
-            <div class="map1"><div class="gmap_canvas1"><iframe width="600" height="300" id="gmap_canvas1" src="https://maps.google.com/maps?q=Augusta%20Place,%20Sunningdale,%20Cape%20Town,%207441&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><style>.map1{position:relative;text-align:right;height:300px;width:600px;}</style><a href="https://www.embedgooglemap.net">embedgooglemap.net</a><style>.gmap_canvas1 {overflow:hidden;background:none!important;height:300px;width: 600px;}</style></div></div>
+            
+            <div class="map1"><div class="gmap_canvas1"><iframe width="600" height="300" id="gmap_canvas1" src="https://maps.google.com/maps?q=Augusta%20Place,%20Sunningdale,%20Cape%20Town,%207441&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><style>.map1{position:relative;text-align:right;height:300px;width:600px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas1 {overflow:hidden;background:none!important;height:300px;width: 600px;}</style></div></div>
+            <div class="map2"><div class="gmap_canvas2"><iframe width="450" height="300" id="gmap_canvas2" src="https://maps.google.com/maps?q=Augusta%20Place,%20Sunningdale,%20Cape%20Town,%207441&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><style>.map2{position:relative;text-align:right;height:300px;width:450px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas2 {overflow:hidden;background:none!important;height:300px;width:450px;}</style></div></div>
         </div>
 
     
