--- a/reviews.html
+++ b/reviews.html
@@ -112,7 +112,7 @@
 
 <!-- Footer -->
 
-<footer id="footer" class="copyright footer-white">
+<footer id="footer" class="copyright footer-white review-footer">
 
     <a target="_blank" href="https://www.facebook.com/SerendipityStorage"><i class="fab social-icons fa-facebook-f"></i></a>
     <a target="_blank" href="https://www.instagram.com/serendipity_storage/"><i class="fab social-icons fa-instagram"></i></a>
