--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="welcome-box">
         <h1 class="slogan-text">Turning your unused space into a happy place!</h1>
     </div>
-    <img class="welcome-img" src="images/Untitled design.png" alt="">
+    <img class="welcome-img" src="images/1.png" alt="">
 </div>
 
 <!-- Features -->
