--- a/products.html
+++ b/products.html
@@ -76,7 +76,13 @@
         <div class="product-row">
 
             <div class="image-container">
-                <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="3000">
+                <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel" data-interval="3000">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators1" data-slide-to="3"></li>
+                    </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img class="product-img" src="images/prod-01.jpeg" alt="Product #1">
@@ -127,18 +133,39 @@
         <div class="product-head">Storage Unit</div>
         <div class="product-row">
 
-                <div class="image-container">
-                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="3000">
-                        <div class="carousel-inner">
-                          <div class="carousel-item active">
+            <div class="image-container">
+                <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel" data-interval="3000">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators2" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators2" data-slide-to="1"></li>   
+                            <li data-target="#carouselExampleIndicators2" data-slide-to="2"></li>   
+                            <li data-target="#carouselExampleIndicators2" data-slide-to="3"></li>   
+                            <li data-target="#carouselExampleIndicators2" data-slide-to="4"></li>   
+                            <!-- <li data-target="#carouselExampleIndicators2" data-slide-to="5"></li>    -->
+                        </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
                             <img class="product-img" src="images/prod-05.jpeg" alt="Product #1">
-                          </div>
-                          <div class="carousel-item">
-                            <img class="product-img" src="images/prod-06.png" alt="Product #2">
-                          </div>
                         </div>
-                      </div>
+                        <div class="carousel-item">
+                            <img class="product-img" src="images/prod-06.png" alt="Product #2">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="product-img" src="images/prod-10.jpeg" alt="Product #3">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="product-img" src="images/prod-11.jpeg" alt="Product #4">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="product-img" src="images/prod-12.jpeg" alt="Product #5">
+                        </div>
+                        <!-- <div class="carousel-item">
+                            <img class="product-img" src="images/prod-13.jpeg" alt="Product #6">
+                        </div> -->
+                    </div>
                 </div>
+            </div>
+
 
             <div class="product-description">
                 <h3>Starting Price: <span class="price-highlight">R490</span></h3> 
@@ -174,13 +201,25 @@
         <div class="product-row">
 
                 <div class="image-container">
-                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="3000">
+                    <div id="carouselExampleIndicators3" class="carousel slide" data-ride="carousel" data-interval="3000">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators3" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators3" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators3" data-slide-to="2"></li>
+                            <li data-target="#carouselExampleIndicators3" data-slide-to="3"></li>
+                        </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
                             <img class="product-img" src="images/prod-07.jpeg" alt="Product #1">
                           </div>
                           <div class="carousel-item">
                             <img class="product-img" src="images/prod-08.jpeg" alt="Product #2">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="product-img" src="images/prod-14.jpeg" alt="Product #3">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="product-img" src="images/prod-15.jpeg" alt="Product #4">
                           </div>
                         </div>
                       </div>
