--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
 
 </head>
 <body>
+    <script>
+        /**
+        * The following event is sent when the page loads. You could
+        * wrap the event in a function to call the event when certain
+        * events (e.g., a click event) happen on your site.
+        */
+        gtag('event', 'screen_view', {
+          'app_name': 'myAppName',
+          'screen_name': 'Home'
+        });
+      </script> 
 
 
 <div class="home-page">
