--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,10 @@
     gtag('js', new Date());
     gtag('config', 'G-SS0K2DWH88');
     </script>
-        
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serendipity</title>
+    <title>Serendipity || Contact</title>
 
     <!-- Google Fonts -->
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/glacial-indifference" type="text/css"/>
