--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serendipity</title>
+    <title>Serendipity || Home</title>
 
     <!-- Fonts -->
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/glacial-indifference" type="text/css"/>
@@ -40,17 +40,6 @@
 
 </head>
 <body>
-    <script>
-        /**
-        * The following event is sent when the page loads. You could
-        * wrap the event in a function to call the event when certain
-        * events (e.g., a click event) happen on your site.
-        */
-        gtag('event', 'screen_view', {
-          'app_name': 'myAppName',
-          'screen_name': 'Home'
-        });
-      </script> 
 
 
 <div class="home-page">
