--- a/products.html
+++ b/products.html
@@ -12,10 +12,10 @@
     gtag('js', new Date());
     gtag('config', 'G-SS0K2DWH88');
     </script>
-        
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serendipity</title>
+    <title>Serendipity || Products</title>
 
     <!-- Google Fonts -->
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/glacial-indifference" type="text/css"/>
@@ -86,7 +86,7 @@
         <div class="product-row">
 
             <div class="image-container">
-                <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel" data-interval="3000">
+                <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel" data-interval="3000" data-pause="false">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
                         <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
@@ -144,7 +144,7 @@
         <div class="product-row">
 
             <div class="image-container">
-                <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel" data-interval="3000">
+                <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel" data-interval="3000" data-pause="false">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators2" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleIndicators2" data-slide-to="1"></li>   
@@ -211,7 +211,7 @@
         <div class="product-row">
 
                 <div class="image-container">
-                    <div id="carouselExampleIndicators3" class="carousel slide" data-ride="carousel" data-interval="3000">
+                    <div id="carouselExampleIndicators3" class="carousel slide" data-ride="carousel" data-interval="3000" data-pause="false">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators3" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleIndicators3" data-slide-to="1"></li>
