--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serendipity</title>
+    <title>Serendipity || About</title>
 
     <!-- Fonts -->
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/glacial-indifference" type="text/css"/>
