--- a/reviews.html
+++ b/reviews.html
@@ -12,10 +12,10 @@
     gtag('js', new Date());
     gtag('config', 'G-SS0K2DWH88');
     </script>
-      
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serendipity</title>
+    <title>Serendipity || Reviews</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
