--- a/about.html
+++ b/about.html
@@ -46,8 +46,8 @@
 <!-- Nav Bar -->
 
 <nav class="navbar navbar-expand-xl navbar-dark">
-    <h1 class="nav-brand">Serendipity</h1>
-    <img class="brand-pic" src="images/logo-white-leaf.png" alt="brand-pic">
+    <h2 class="nav-brand">Serendipity</h2>
+    <img class="brand-pic" src="images/logo-white-leaf.png" alt="business-logo-white">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -77,22 +77,22 @@
 <!-- Content -->
 
 <div class="about-content"> 
-    <img class="about-img" src="images/prod-09.jpeg" alt="Product Image">
+    <img class="about-img" src="images/prod-09.jpeg" alt="Kitchen Cupboard">
     <div class="about-text">
         <div class="about-text-box">
             <h1>serendipity</h1>
             <p>/ˌsɛr(ə)nˈdɪpɪti/</p>
-            <p><em>noun</em></p>
+            <p><div class="italicized">noun</div></p>
             <h5>Finding something beautiful without looking for it.</h5>
         </div>
         <div class="about-text-box">
-        <em class="about-paragraph">
+        <div class="about-paragraph italicized">
             <p>Our passion is to turn unused spaces into happy places that are 
                 both aesthetically pleasing and functional.
             </p>
         </div>
         We love our units and so do our customers!
-        </em>
+    </div>
         <div class="about-button-box">
             <a class="btnl about-button btnl--white btnl--animated" href="products.html">View our Products</a>
             <a class="btnl about-button btnl--white btnl--animated" href="reviews.html">Read our Reviews</a>    
