--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 
 <nav class="navbar navbar-expand-xl navbar-light">
     <h1 class="nav-brand">Serendipity</h1>
-    <img class="brand-pic" src="images/logo-blue-leaf.png" alt="brand-pic">
+    <img class="brand-pic" src="images/logo-blue-leaf.png" alt="business-logo-blue">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -81,7 +81,7 @@
     <div class="contact-box"> 
 
         <div class="contact-table">
-            <h2 class="contact-head">Contact Info</h2>
+            <h1 class="contact-head">Contact Info</h1>
 
             <table>
                 <tr class="verti-top">
