--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 <!-- Navigation Bar -->
 
 <nav class="navbar navbar-expand-xl navbar-dark">
-    <h1 class="nav-brand">Serendipity</h1>
-<img class="brand-pic" src="images/logo-white-leaf.png" alt="brand-pic">
+    <h2 class="nav-brand">Serendipity</h2>
+    <img class="brand-pic" src="images/logo-white-leaf.png" alt="business-logo-white">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -83,7 +83,7 @@
     <div class="welcome-box">
         <h1 class="slogan-text">Turning your unused space into a happy place!</h1>
     </div>
-    <img class="welcome-img" src="images/3.png" alt="">
+    <img class="welcome-img" src="images/3.png" alt="Storage Cabinets">
 </div>
 
 <!-- Features -->
