--- a/reviews.html
+++ b/reviews.html
@@ -16,6 +16,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serendipity || Reviews</title>
+    <meta name="description" content="We love our units and so do our customers!">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -54,8 +55,8 @@
     <!-- Nav Bar -->
 
     <nav class="navbar navbar-expand-xl navbar-dark">
-      <h1 class="nav-brand">Serendipity</h1>
-      <img class="brand-pic" src="images/logo-white-leaf.png" alt="brand-pic">
+      <h2 class="nav-brand">Serendipity</h2>
+      <img class="brand-pic" src="images/logo-white-leaf.png" alt="business-logo-white">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
