--- a/products.html
+++ b/products.html
@@ -49,7 +49,7 @@
 
 <nav class="navbar navbar-expand-xl navbar-light">
     <h1 class="nav-brand">Serendipity</h1>
-    <img class="brand-pic" src="images/logo-blue-leaf.png" alt="brand-pic">
+    <img class="brand-pic" src="images/logo-blue-leaf.png" alt="business-logo-blue">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -95,16 +95,16 @@
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img class="product-img" src="images/prod-01.jpeg" alt="Product #1">
+                        <img class="product-img" src="images/prod-01.jpeg" alt="Storage Unit #1">
                       </div>
                       <div class="carousel-item">
-                        <img class="product-img" src="images/prod-02.jpeg" alt="Product #2">
+                        <img class="product-img" src="images/prod-02.jpeg" alt="Storage Unit #2">
                       </div>
                       <div class="carousel-item">
-                        <img class="product-img" src="images/prod-03.jpeg" alt="Product #3">
+                        <img class="product-img" src="images/prod-03.jpeg" alt="Storage Unit #3">
                       </div>
                       <div class="carousel-item">
-                        <img class="product-img" src="images/prod-04.jpeg" alt="Product #4">
+                        <img class="product-img" src="images/prod-04.jpeg" alt="Storage Unit #4">
                       </div>
                     </div>
                   </div>
@@ -151,27 +151,23 @@
                             <li data-target="#carouselExampleIndicators2" data-slide-to="2"></li>   
                             <li data-target="#carouselExampleIndicators2" data-slide-to="3"></li>   
                             <li data-target="#carouselExampleIndicators2" data-slide-to="4"></li>   
-                            <!-- <li data-target="#carouselExampleIndicators2" data-slide-to="5"></li>    -->
                         </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="product-img" src="images/prod-05.jpeg" alt="Product #1">
+                            <img class="product-img" src="images/prod-05.jpeg" alt="Storage Unit #1">
                         </div>
                         <div class="carousel-item">
-                            <img class="product-img" src="images/prod-06.png" alt="Product #2">
+                            <img class="product-img" src="images/prod-06.png" alt="Storage Unit #2">
                         </div>
                         <div class="carousel-item">
-                            <img class="product-img" src="images/prod-10.jpeg" alt="Product #3">
+                            <img class="product-img" src="images/prod-10.jpeg" alt="Storage Unit #3">
                         </div>
                         <div class="carousel-item">
-                            <img class="product-img" src="images/prod-11.jpeg" alt="Product #4">
+                            <img class="product-img" src="images/prod-11.jpeg" alt="Storage Unit #4">
                         </div>
                         <div class="carousel-item">
-                            <img class="product-img" src="images/prod-12.jpeg" alt="Product #5">
+                            <img class="product-img" src="images/prod-12.jpeg" alt="Storage Unit #5">
                         </div>
-                        <!-- <div class="carousel-item">
-                            <img class="product-img" src="images/prod-13.jpeg" alt="Product #6">
-                        </div> -->
                     </div>
                 </div>
             </div>
@@ -220,16 +216,16 @@
                         </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img class="product-img" src="images/prod-07.jpeg" alt="Product #1">
+                            <img class="product-img" src="images/prod-07.jpeg" alt="Storage Cabinet #1">
                           </div>
                           <div class="carousel-item">
-                            <img class="product-img" src="images/prod-08.jpeg" alt="Product #2">
+                            <img class="product-img" src="images/prod-08.jpeg" alt="Storage Cabinet #2">
                           </div>
                           <div class="carousel-item">
-                            <img class="product-img" src="images/prod-14.jpeg" alt="Product #3">
+                            <img class="product-img" src="images/prod-14.jpeg" alt="Storage Cabinet #3">
                           </div>
                           <div class="carousel-item">
-                            <img class="product-img" src="images/prod-15.jpeg" alt="Product #4">
+                            <img class="product-img" src="images/prod-15.jpeg" alt="Storage Cabinet #4">
                           </div>
                         </div>
                       </div>
