--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serendipity || About</title>
+    <meta name="description" content="Welcome to Serendipity - Storage for Small Spaces. Our passion is to turn unused spaces into happy places that are both aesthetically pleasing and functional.">
 
     <!-- Fonts -->
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/glacial-indifference" type="text/css"/>
