--- a/reviews.html
+++ b/reviews.html
@@ -16,7 +16,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serendipity || Reviews</title>
-    <meta name="description" content="We love our units and so do our customers!">
+    <meta name="description" content="We love our units and so do our customers! 'Service is absolutely amazing, product quality is amazing! I'm definitely sold! Going back for more!'">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
