--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serendipity || Contact</title>
+    <meta name="description" content="Please feel free to contact us, send us an email using our contact form or check out our social media pages!">
 
     <!-- Google Fonts -->
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/glacial-indifference" type="text/css"/>
@@ -48,7 +49,7 @@
 <!-- Nav Bar -->
 
 <nav class="navbar navbar-expand-xl navbar-light">
-    <h1 class="nav-brand">Serendipity</h1>
+    <h2 class="nav-brand">Serendipity</h2>
     <img class="brand-pic" src="images/logo-blue-leaf.png" alt="business-logo-blue">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
