--- a/products.html
+++ b/products.html
@@ -16,6 +16,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serendipity || Products</title>
+    <meta name="description" content="Our clients comment time and time again on the quality of our products, and how well constructed our units are.">
 
     <!-- Google Fonts -->
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/glacial-indifference" type="text/css"/>
