--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serendipity || About</title>
+    <meta name="description" content="Welcome to Serendipity - Storage for Small Spaces. Our passion is to turn unused spaces into happy places that are both aesthetically pleasing and functional.">
 
     <!-- Fonts -->
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/glacial-indifference" type="text/css"/>
@@ -38,6 +39,14 @@
     
 </head>
 <body>
+<div class="hidden">
+    Serendipity Cabinets Storage for small spaces helping with productivity and clarity 
+    cabinets units Versatile Whether you want to add extra storage to your bathroom, declutter 
+    your bedroom, or display that something special in your lounge, our units are a must. Quality 
+    Product Our clients comment time and time again on the quality of our products, and how well 
+    constructed our units are. Quick delivery We enjoy giving our clients only the best service, 
+    by assuring quick crafting and delivery.
+</div>
 
 
 <div class="about-page">
