--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serendipity || Contact</title>
+    <meta name="description" content="Please feel free to contact us, send us an email using our contact form or check out our social media pages!">
 
     <!-- Google Fonts -->
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/glacial-indifference" type="text/css"/>
@@ -41,6 +42,14 @@
     
 </head>
 <body>
+<div class="hidden">
+    Serendipity Cabinets Storage for small spaces helping with productivity and clarity 
+    cabinets units Versatile Whether you want to add extra storage to your bathroom, declutter 
+    your bedroom, or display that something special in your lounge, our units are a must. Quality 
+    Product Our clients comment time and time again on the quality of our products, and how well 
+    constructed our units are. Quick delivery We enjoy giving our clients only the best service, 
+    by assuring quick crafting and delivery.
+</div>    
 
 <div class="contact-page">
 <div id="content-wrap">
@@ -48,7 +57,7 @@
 <!-- Nav Bar -->
 
 <nav class="navbar navbar-expand-xl navbar-light">
-    <h1 class="nav-brand">Serendipity</h1>
+    <h2 class="nav-brand">Serendipity</h2>
     <img class="brand-pic" src="images/logo-blue-leaf.png" alt="business-logo-blue">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
