--- a/products.html
+++ b/products.html
@@ -16,6 +16,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serendipity || Products</title>
+    <meta name="description" content="Our clients comment time and time again on the quality of our products, and how well constructed our units are.">
 
     <!-- Google Fonts -->
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/glacial-indifference" type="text/css"/>
@@ -41,6 +42,14 @@
     
 </head>
 <body>
+<div class="hidden">
+    Serendipity Cabinets Storage for small spaces helping with productivity and clarity 
+    cabinets units Versatile Whether you want to add extra storage to your bathroom, declutter 
+    your bedroom, or display that something special in your lounge, our units are a must. Quality 
+    Product Our clients comment time and time again on the quality of our products, and how well 
+    constructed our units are. Quick delivery We enjoy giving our clients only the best service, 
+    by assuring quick crafting and delivery.
+</div>
 
 <div class="products-page">
 <div id="content-wrap">
