--- a/reviews.html
+++ b/reviews.html
@@ -16,7 +16,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serendipity || Reviews</title>
-    <meta name="description" content="We love our units and so do our customers!">
+    <meta name="description" content="We love our units and so do our customers! 'Service is absolutely amazing, product quality is amazing! I'm definitely sold! Going back for more!'">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -47,6 +47,14 @@
     
 </head>
 <body>
+<div class="hidden">
+    Serendipity Cabinets Storage for small spaces helping with productivity and clarity 
+    cabinets units Versatile Whether you want to add extra storage to your bathroom, declutter 
+    your bedroom, or display that something special in your lounge, our units are a must. Quality 
+    Product Our clients comment time and time again on the quality of our products, and how well 
+    constructed our units are. Quick delivery We enjoy giving our clients only the best service, 
+    by assuring quick crafting and delivery.
+</div>
 
   <div class="reviews-page">
     <div id="content-wrap">
