--- a/index.html
+++ b/index.html
@@ -91,7 +91,12 @@
     <div class="welcome-box">
         <h1 class="slogan-text">Turning your unused space into a happy place!</h1>
     </div>
-    <img class="welcome-img" src="images/3.png" alt="Storage Cabinets">
+    <div class="welcome-img-box">
+        <img class="welcome-img1" src="images/home pic/1.png" alt="Storage Cabinets #1">
+        <img class="welcome-img2" src="images/home pic/2.png" alt="Storage Cabinets #2">
+        <img class="welcome-img3" src="images/home pic/3.png" alt="Storage Cabinets #3">
+    </div>
+
 </div>
 
 <!-- Features -->
