Home page mob friendly

--- a/index.html
+++ b/index.html
@@ -105,17 +105,17 @@
     <div class="row">
         <div class="feature-box col-lg-4">
             <i class="features-icon fas fa-check-circle fa-2x"></i>
-            <h3>Versatile</h3>
+            <h3 class="feature-head">Versatile</h3>
             <p>Whether you want to add extra storage to your bathroom, declutter your bedroom, or display that something special in your lounge, our units are a must.</p>
         </div>
         <div class="feature-box col-lg-4">
             <i class="features-icon fas fa-star fa-2x"></i>
-            <h3>Quality Product</h3>
+            <h3 class="feature-head">Quality Product</h3>
             <p>Our clients comment time and time again on the quality of our products, and how well constructed our units are.</p>
         </div>
         <div class="feature-box col-lg-4">
             <i class="features-icon fa-solid fa-truck fa-2x"></i>
-            <h3>Quick delivery</h3>
+            <h3 class="feature-head">Quick delivery</h3>
             <p>We enjoy giving our clients only the best service, by assuring quick crafting and delivery.</p>
         </div>
     </div>
